objects/tffa__AddOnServiceItem__c.object
<CustomObject>
    <description>Holds reference to an add-on service.</description>
    <fields>
        <fullName>tffa__Checklist__c</fullName>
        <description>Reference to parent checklist.</description>
        <label>Checklist</label>
        <referenceTo>tffa__AddOnServiceChecklist__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__DefaultSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the add-on service is selected by default in the UI.</description>
        <label>Default selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Additional information about the add-on service. Usually contextual and related to checklist and item details.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MaximumAllowed__c</fullName>
        <description>Maximum number of times an add-on service can be applied for (captured as preference) in an application.</description>
        <label>Maximum allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the add on item is required</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Service__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to service</description>
        <label>Service</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Service not active.</errorMessage>
            <filterItems>
                <field>tffa__AddOnService__c.tffa__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__AddOnService__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Add On Service Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Add On Service Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>